--- a/package.json
+++ b/package.json
@@ -1,12 +1,13 @@
 {
-  "name": "fgreat",
+  "name": "compliance-fgreat",
   "version": "0.1.0",
   "private": true,
   "scripts": {
     "dev": "next dev",
-    "build": "next build",
+    "build": "prisma generate && next build",
     "start": "next start",
-    "lint": "eslint"
+    "lint": "eslint",
+    "postinstall": "prisma generate"
   },
   "dependencies": {
     "@hookform/resolvers": "^5.2.2",
@@ -18,7 +19,6 @@
     "konva": "^10.2.0",
     "lucide-react": "^0.575.0",
     "next": "16.1.6",
-    "next-auth": "^4.24.13",
     "react": "19.2.3",
     "react-dom": "19.2.3",
     "react-hook-form": "^7.71.2",
