--- a/package.json
+++ b/package.json
@@ -14,8 +14,11 @@
     "@prisma/client": "^5.22.0",
     "@supabase/ssr": "^0.8.0",
     "@supabase/supabase-js": "^2.97.0",
+    "@types/dompurify": "^3.0.5",
     "bcryptjs": "^3.0.3",
+    "dompurify": "^3.3.1",
     "framer-motion": "^12.34.3",
+    "isomorphic-dompurify": "^3.0.0",
     "konva": "^10.2.0",
     "lucide-react": "^0.575.0",
     "next": "16.1.6",
